-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.807 2010-10-27 22:31:21 guru Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2010-11-01	pwessel
	* GMT 4.5.4 finalized and released. GMT 5.0.0alpha announced, get via cvs
-----------------------------------------------------------------------------------------
2010-10-27	pwessel
	* psmask.c:		Did not update internal clip level (if not -T) in order
				to warn if clipping has not been terminated.

2010-10-26	pwessel
	* mapproject.c:		When -L is used with -fg and an ellipse we convert lats
				to geocentric lats before doing spherical trig.

2010-10-24	jluis
	* gmtdefaults:		Still had one free() that should be GMT_free (Win crash)

2010-10-19	pwessel
	* gmtswitch:		Given D it picks the first entry in .gmtversions. Also
				is now installed with rest of scripts and executables.
	* mapproject.c		Did not show/explain the option of appending + to -L.
				Corrected synopsis, usage, and man page.

2010-10-17	pwessel
	* grdpaste.c:		Lacked -fg so could not paste 352/360 and 0/8 in longitudes.

2010-10-14	pwessel
	* psbasemap.c:		The -L option had trouble parsing if there were + signs
				in the label string.
	* pscoast.c:		---"---
	
2010-10-13	pwessel
	* mapproject.c:		Did not reset azimuth to NaN at start of next segment.
	* psscale.c:		Give warning and skip any command-line file arguments.
	* pscoast.c:		Give warning and skip any command-line file arguments.
	* psbasemap.c:		Give warning and skip any command-line file arguments.

2010-10-05	pwessel
	* configure.ac:		Set correct mex extensions for 64-bit version.
	
2010-09-29	pwessel
	* share/time/hi.d:	Added Hawaiian time language items.

2010-09-28	remko
	* gmt_mgg.c:		Use GMT_getsharepath to find gmtfile_paths file.

2010-09-27	pwessel