@@ -1,11 +1,15 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.807 2010-10-27 22:31:21 guru Exp $
+	$Id: ChangeLog,v 1.808 2010-10-28 21:24:57 guru Exp $
 -----------------------------------------------------------------------------------------
 
 -----------------------------------------------------------------------------------------
 2010-11-01	pwessel
 	* GMT 4.5.4 finalized and released. GMT 5.0.0alpha announced, get via cvs
 -----------------------------------------------------------------------------------------
+2010-10-28	pwessel
+	* gmt_init.c:		Could not use @:<size>: and @:: in -B strings as the colons
+				interfered with the :label: parsing.  Now fixed.
+
 2010-10-27	pwessel
 	* psmask.c:		Did not update internal clip level (if not -T) in order
 				to warn if clipping has not been terminated.
